Fixing spacing issues on the type

--- a/styles/casestudy.css
+++ b/styles/casestudy.css
@@ -10,7 +10,7 @@
   }
 
   p.chart {
-    text-align: center;
+    /* text-align: center; */
     padding-bottom: 10px;
   }
 
@@ -273,7 +273,6 @@ p.color-box3 {
 
   .solution {
     padding: 0px 75px 0px 0px;
-
     grid-column:2/3;
 
   }
@@ -415,6 +414,7 @@ p.color-box3 {
   }
 
   .prosol {
+    grid-column-gap: 50px;
     margin-left: -110px;
     margin-right: -110px;
     padding-top: 50px;
