--- a/styles/main.css
+++ b/styles/main.css
@@ -60,8 +60,8 @@ h1 {
     font-size: 16px;
     font-weight: 900;
     margin-top: 10px;
-    margin-bottom: 10px;
-    text-align: center;
+    margin-bottom: 5px;
+    /* text-align: center; */
   }
 
   p.label {
@@ -262,7 +262,7 @@ h2 {
 
 h3  {
   font-size: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 h4 {
